--- a/src/public/assets/style/style.css
+++ b/src/public/assets/style/style.css
@@ -4,8 +4,9 @@
  */
 
 html {
-    font-family: sans-serif;
+    font-family: Roboto, Noto, sans-serif;
     color: #333;
+    box-sizing: border-box;
 }
 
 body {
