--- a/public/style.css
+++ b/public/style.css
@@ -4,4 +4,26 @@
 
 * {
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+}
+
+.font-light {
+    font-weight: 300;
+}
+.font-regular {
+    font-weight: 400;
+}
+.font-medium {
+    font-weight: 500;
+}
+.font-bold {
+    font-weight: 700;
+}
+
+h1 {
+    margin: 0;
+    font-size: 20px;
+    font-weight: 500;
 }
