--- a/components/Header.css
+++ b/components/Header.css
@@ -11,7 +11,14 @@
     display: flex;
 }
 
+.icon {
+  border: none;
+  background-color: transparent;
+}
 .icon:hover {
     border-radius: 6px;
     background-color: rgba(177,177,177,.35);
+}
+.icon:focus {
+  outline: none;
 }
