--- a/components/MenuListItem.css
+++ b/components/MenuListItem.css
@@ -1,4 +1,7 @@
 .container {
+    display: flex;
+    width: 100%;
+    padding: 16px;
     transition: background-color 0.2s ease;
     border-radius: 15px;
 }
@@ -14,4 +17,11 @@
     color: rgba(0,0,0,.87);
     line-height: 24px;
     flex: 1;
+    text-align: left;
+}
+
+.icon {
+    width: 50px;
+    color: #757575;
+    text-align: left;
 }
