--- a/containers/Menu.css
+++ b/containers/Menu.css
@@ -3,9 +3,8 @@
     top: 0;
     left: 0;
     bottom: 0;
-    right: 0;
+    width: 100%;
     z-index: 15;
-    background-color: transparent;
     transition: background-color 0.5s ease;
     pointer-events: none;
 }
