--- a/app/components/MenuListItem.css
+++ b/app/components/MenuListItem.css
@@ -6,6 +6,10 @@
     border-radius: 15px;
 }
 
+.container.flipped {
+    flex-direction: row-reverse;
+}
+
 .container:active {
     transition: background-color 0s ease;
     background-color: rgba(177,177,177,.35);
@@ -19,9 +23,15 @@
     flex: 1;
     text-align: left;
 }
+.flipped .label {
+    text-align: right;
+}
 
 .icon {
     width: 50px;
     color: #757575;
     text-align: left;
+}
+.flipped .icon {
+    text-align: right;
 }
