--- a/app/components/MenuUserHeader.css
+++ b/app/components/MenuUserHeader.css
@@ -1,19 +1,41 @@
 .container {
-    padding: 24px 16px 8px 16px;
     background-color: var(--uci-yellow);
     border-bottom: 1px solid #E4E4E4;
     color: #757575;
 }
 
 .icon {
-    margin-top: 16px;
+    color: #757575;
+    margin: 24px 16px 0 16px;
+    font-size: 64;
     width: 64px;
     height: 64px;
 }
 
 .subtitle {
+    margin: 0 16px 8px 16px;
     height: 56px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.emailRow {
+    display: flex;
+    line-height: 24px;
+}
+
+.expandButton {
+    transition: transform 0.2s ease;
+}
+
+.expandButton.expanded {
+    transform: rotate(-180deg);
+}
+
+.details {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    padding: 8px 0;
 }
