--- a/app/public/style.css
+++ b/app/public/style.css
@@ -2,6 +2,10 @@
     --uci-yellow: #FED105;
 }
 
+body {
+    margin: 0;
+}
+
 * {
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
