--- a/app/containers/Onboarding.css
+++ b/app/containers/Onboarding.css
@@ -11,10 +11,11 @@
     justify-content: center;
 }
 
-.field {
-    width: 100%;
-}
-
-.submit {
-    width: 100%;
+.container {
+    min-width: 300px;
+    max-width: 100%;
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
