--- a/app/components/plan-view/Course.css
+++ b/app/components/plan-view/Course.css
@@ -1,13 +1,10 @@
-.container {
+.content {
     display: flex;
     white-space: nowrap;
-    border-left: 1px solid black;
-    border-top: 1px solid black;
-    background-color: white;
     padding: 12px;
 }
 
-.container > * + * {
+.content > * + * {
     margin-left: 12px;
 }
 
